@@ -16,19 +16,16 @@
 
         <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
 
-        <spring-boot.version>3.2.0</spring-boot.version>
         <jansi.version>2.4.0</jansi.version>
         <maria-db.version>2.6.1</maria-db.version>
         <lombok.version>1.18.24</lombok.version>
         <gson.version>2.10</gson.version>
         <guava.version>32.0.0-android</guava.version>
         <reflections.version>0.10.2</reflections.version>
-        <testcontainers.version>1.19.3</testcontainers.version>
         <commons-io.version>2.11.0</commons-io.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <jakarta.inject.api>2.0.1</jakarta.inject.api>
+        <cron4j.version>2.2.5</cron4j.version>
     </properties>
 
     <dependencies>
@@ -52,6 +49,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>it.sauronsoftware.cron4j</groupId>
+            <artifactId>cron4j</artifactId>
+            <version>${cron4j.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -84,15 +86,6 @@
                             <version>0.2.0</version>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.surefire</groupId>
-                <artifactId>surefire</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                    <forkCount>0</forkCount>
                 </configuration>
             </plugin>
             <plugin>
